// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupComponent given \`elementsToFind\` returns the element 1`] = `
<div
  className="coolClass"
>
  cool is what I am
</div>
`;

exports[`setupComponent mount constructs a mount component 1`] = `
<div>
  <h1>
    default title
  </h1>
  <p>
    default data
  </p>
</div>
`;

exports[`setupComponent mount overrides default props with function props 1`] = `
<div>
  <h1>
    default title
  </h1>
  <p>
    overridden data
  </p>
</div>
`;

exports[`setupComponent shallow constructs a shallow component 1`] = `
<h1>
  i am a default prop
</h1>
`;

exports[`setupComponent shallow overrides default props with function props 1`] = `
<h1>
  I am a cool overridden prop!!
</h1>
`;
